# sonar-vision

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.streaming  PACKAGES.md  README.md  cross-pollination-plan.md  cross-pollination-results.json  docker-compose.streaming.yml  docker-compose.yml  flux-physics-proposal.md  index.html  landing.html  neural_physics.py  pyproject.toml  sonar-vision-cli.py  streaming.py
.github/workflows/: ci.yml
.plato/: 2026-04-29-sonarvision-delivery.i2i  GIT_NATIVE.md  README.md
.plato/flux-bytecode/: sonar-preprocess.flux
.plato/tiles/: sv-arch-001.json  sv-gct-001.json  sv-phys-001.json  sv-ssl-001.json
benchmarks/: run_benchmarks.py
configs/: debug.yaml  default.yaml  jetson-nx.yaml
cross-pollination-prs/: liaison-agent-cartridge-agent.md
dashboard/: index.html
dashboard-widget/: sonar-panel.html
demo/: sonar-vision-demo.ipynb
docs/: API.md  GETTING_STARTED.md  HARDWARE_GUIDE.md  ONBOARDING.md  TUTORIALS.md  USE_CASES.md  gallery.html  index.html
docs-site/: index.html
monitoring/: prometheus.yml
notebooks/: sonar-vision-physics.ipynb
open-agents/: README.md
plugins/: README.md  holodeck-sonar-plugin.rs  sonar-vision-mud-plugin.md
sim-pipeline/: pyproject.toml
sim-pipeline/sim_pipeline/: __init__.py  __main__.py  cli.py  display.py  mission.py  physics.py  pipeline.py
sonar_vision/: __init__.py  config.py  deploy.py  pipeline.py  train.py
sonar_vision/aggregator/: __init__.py  gct.py
sonar_vision/data/: __init__.py  augmentation.py  preprocessing.py  sonar_dataset.py
sonar_vision/decoder/: __init__.py  jepa_decoder.py  video_decoder.py
sonar_vision/encoder/: __init__.py  sonar_encoder.py
sonar_vision/federated/: __init__.py
sonar_vision/integrations/: __init__.py
sonar_vision/integrations/businesslog/: __init__.py  meter.py
sonar_vision/integrations/dashboard/: __init__.py  stream.py
sonar_vision/nightly/: __init__.py  cron.py  lora_trainer.py
sonar_vision/supervision/: __init__.py  depth_weighted_loss.py
sonar_vision/utils/: visualization.py
sonar_vision/water/: __init__.py  advanced_physics.py  constraint_physics.py  physics.py
tests/: __init__.py  test_config.py  test_encoder.py  test_gct.py  test_jepa_decoder.py  test_marine_gpu_integration.py  test_pipeline.py  test_water.py
(+5 files in other folders)
