[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-vision"
version = "0.1.0"
description = "Depth sounder to underwater video prediction with self-supervised multi-camera learning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]
flashinfer = ["flashinfer>=0.1.0"]
jetson = ["torch==2.3.0", "torchvision==0.18.0"]

[tool.setuptools.packages.find]
include = ["sonar_vision*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
