[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-sim-pipeline"
version = "1.0.0"
description = "Production-quality sonar simulation pipeline with FLUX physics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Fleet Engineering", email = "fleet@example.com"}
]
keywords = ["sonar", "auv", "acoustics", "simulation", "physics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[project.scripts]
pipeline = "sim_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/example/sonar-sim-pipeline"
Repository = "https://github.com/example/sonar-sim-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["sim_pipeline*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]
